style: fixed navlinks not aligning to center with other nav items: like logo and logolinks

--- a/src/components/authLinks/authLinks.module.css
+++ b/src/components/authLinks/authLinks.module.css
@@ -16,23 +16,10 @@
     height: 2px;
     background-color: var(--textColor);
   }
-  
   .responsiveMenu{
-    position: absolute;
-    top: 100px;
-    left: 0;
-    background-color: var(--bg);
-    height: calc(100vh - 100px);
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 50px;
-    font-size: 24px;
-    font-weight: bold;
-    z-index: 999;
+    display: none;
   }
+  
   
   @media screen and (max-width: 640px) {
     .burger {
@@ -41,5 +28,21 @@
   
     .link{
       display: none;
+    }
+    .responsiveMenu{
+      position: absolute;
+      top: 100px;
+      left: 0;
+      background-color: var(--bg);
+      height: calc(100vh - 100px);
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      gap: 50px;
+      font-size: 24px;
+      font-weight: bold;
+      z-index: 999;
     }
   }
