--- a/src/components/themeToggle/themeToggle.module.css
+++ b/src/components/themeToggle/themeToggle.module.css
@@ -1,8 +1,9 @@
 .container {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
     width: 50px;
+    gap: 4px;
     height: 25px;
     border-radius: 15px;
     cursor: pointer;
